@@ -39,6 +39,13 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 * Issue #12: Improved documentation of atf-sh-api(3) and atf-check(1) by
   better explaining how they relate to each other.
 
+* Issue #14: Stop setting 'set -e' in atf-sh.  This setting was initially
+  added as a way to enable a "strict" mode in the library and to make test
+  cases fail fast when they run unprotected commands.  However, doing so
+  in the library is surprising as the responsibility of enabling 'set -e'
+  should be on the user's code.  Also, 'set -e' introduces inconsistent
+  behavior on subshells and users do not expect that.
+
 * Issue #15: Fix atf_utils_{fork,wait} to support nested calls.
 
 * Issue #16: Fixed test failures (by removing a long-standing hack) on
